# regime_crypto_trader

./: .env.template  README.md  pyproject.toml  requirements.txt  run_daily.py
.github/workflows/: daily_paper_trade.yml
config/: frozen_config.yaml
logs/decisions/: decisions.csv  latest_decision.csv
logs/diagnostics/: gate_diagnostics.csv  latest_gate_diagnostics.csv  latest_gate_diagnostics.json
logs/health/: health_status.json  signal_history.csv
logs/legacy/: performance_latest.csv
logs/orders/: latest_submitted_orders.csv  planned_orders.csv
logs/portfolio/: portfolio.csv
logs/positions/: positions.csv
logs/target_weights/: latest_target_weights.csv
model_artifacts/: feature_schema.json  metadata.json  selected_strategy.json  supported_assets.json
notebooks/: v26_alpaca_long_only_production_notebook.ipynb  v26_research_reference.ipynb  v26_research_reference.py
src/v26_crypto_trader/: alpaca_data.py  broker_alpaca.py  execution.py  features.py  performance.py  risk.py  run_daily.py  settings.py  strategy.py
